--- a/index.html
+++ b/index.html
@@ -10552,7 +10552,7 @@ likely contribute to model error.
 <li><strong>Regularization critical:</strong> Prevents overfitting, especially for sparse users/items</li>
 </ol>
 <h3 id="Future-Work">Future Work<a class="anchor-link" href="#Future-Work">¶</a></h3><ul>
-<li><strong>Add side information:</strong> Product text, images, categories</li>
+<li><strong>Add side information:</strong> Time information, text length, etc</li>
 <li><strong>Time dynamics:</strong> Capture temporal patterns in ratings</li>
 <li><strong>Deep learning:</strong> Neural collaborative filtering, attention mechanisms</li>
 <li><strong>Ensemble methods:</strong> Combine multiple models for robustness</li>
